# crowos

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  build.sh  clean.sh  crowos  debug.sh  grub.cfg  iso.sh  kernel.c  qemu.sh
cmake/: i686-elf-toolchain.cmake
kernel/: CMakeLists.txt  Makefile
kernel/arch/i386/: boot.S  gdt.c  idt.c  interrupt_handler.c  linker.ld  make.config
kernel/include/kernel/: gdt.h  idt.h  io_functions.h
kernel/kernel/: kernel.c
libc/: CMakeLists.txt
libc/include/: io.h
libc/include/sys/: cdefs.h
libc/io/: io.c
libc/stdio/: printf.c
